Migrate Guillotine to new portal URL functions #1014